<resources>
    <string name="app_name">KGHub</string>
    <string name="navigation_toolbar_open" translatable="false">navigation_toolbar_open</string>
    <string name="navigation_toolbar_close" translatable="false">navigation_toolbar_close</string>
    <string name="public_gists">公开仓库</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="login_in_browser">在浏览器中登录</string>
    <string name="oauth_tip">使用您的默认浏览器登录(OAuth)</string>
    <string name="user_name_warning">用户名不可用！</string>
    <string name="password_warning">密码不可用！</string>
    <string name="profile">主页</string>
    <string name="notifications">通知</string>
    <string name="news">动态</string>
    <string name="issues">问题</string>
    <string name="repositories">版本库</string>
    <string name="owned">我的</string>
    <string name="starred">星标</string>
    <string name="trending">趋势</string>
    <string name="explore">搜索</string>
    <string name="info_and_repositories">信息 &#038; 偏好</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="no_cache_and_network">网络和缓存不可用。</string>
    <string name="title_activity_repository">OpenHub</string>
    <string name="title_activity_settings">设置</string>
    <string name="choose_theme">选择主题</string>
    <string name="cache_controller">缓存控制</string>
    <string name="cache_controller_desc">如果缓存可用，先加载缓存，然后从网络加载</string>
    <string name="language">语言</string>
    <string name="logout">退出</string>
    <string name="daily">每日的</string>
    <string name="weekly">每周的</string>
    <string name="monthly">每月的</string>
    <string name="page_no_found">页面不存在</string>
    <string name="no_network_tip">从GitHub加载数据失败，请检查网络后重试。</string>
    <string name="load_timeout_tip">从GitHub加载数据超时，请检查网络后重试。</string>
    <string name="repository">版本库</string>
    <string name="info">信息</string>
    <string name="files">文件</string>
    <string name="commits">提交</string>
    <string name="star">星标</string>
    <string name="branch_tip">分支或标签</string>
    <string name="share">分享</string>
    <string name="open_in_browser">在浏览器中打开</string>
    <string name="copy_url">复制链接</string>
    <string name="wrap_lines">自动换行</string>
    <string name="refresh">刷新</string>
    <string name="success_copied">已复制</string>
    <string name="warning_dialog_tile">警告</string>
    <string name="cancel">取消</string>
    <string name="ok">好的</string>
    <string name="confirm">确认</string>
    <string name="select_branch">选择分支或标签</string>
    <string name="share_to">未安装邮件客户端</string>
    <string name="url_invalid">链接不可用</string>
    <string name="view_archive_file_error">文件不支持，请下载后查看。</string>
    <string name="invalid_repo_url">版本库链接无效</string>
    <string name="follow">跟随</string>
    <string name="followed">已跟随</string>
    <string name="unfollow">取消跟随</string>
    <string name="unfollowed">已取消跟随</string>
    <string name="members">成员</string>
    <string name="view">查看</string>
    <string name="followers">跟随者</string>
    <string name="following">跟随</string>
    <string name="repos">版本库</string>
    <string name="stars">星标</string>
    <string name="joined_at">加入时间</string>
    <string name="users">用户</string>
    <string name="activity">活动</string>
    <string name="seconds_ago">秒前</string>
    <string name="minutes_ago">分钟前</string>
    <string name="hours_ago">小时前</string>
    <string name="days_ago">天前</string>
    <string name="search">搜索</string>
    <string name="sort">排序</string>
    <string name="logout_warning">确定要登出？</string>
    <string name="unknown">未知</string>
    <string name="organizations">组织</string>
    <string name="no_user">没有用户</string>
    <string name="no_activity">没有活动</string>
    <string name="no_repository">没有版本库</string>
    <string name="no_file">没有文件</string>
    <string name="developing">开发中</string>
    <string name="no_data">没有数据</string>
    <string name="author">作者</string>
    <string name="email">邮件</string>
    <string name="source_code">源代码</string>
    <string name="send_email">发送邮件</string>
    <string name="version">版本</string>
    <string name="follow_on_github">在GitHub上跟随我</string>
    <string name="invalid_query">无效的查询内容</string>
    <string name="no_email_clients">未安装邮件客户端</string>
    <string name="no_share_clients">未安装分享软件</string>
    <string name="tap_to_retry">点击重试</string>
    <string name="loading">加载中</string>
    <string name="stargazers">星标</string>
    <string name="theme_accent_color">主题强调色</string>
    <string name="unstar">取消星标</string>
    <string name="unstarred">已取消星标</string>
    <string name="unwatch">取消关注</string>
    <string name="unwatched">已取消关注</string>
    <string name="watch">关注</string>
    <string name="watched">已关注</string>
    <string name="watchers">关注者</string>
    <string name="fork">创建版本库分支</string>
    <string name="fork_tag">分支</string>
    <string name="fork_warning_msg">创建版本库分支？</string>
    <string name="forked">已创建版本库分支</string>
    <string name="forks">仓库</string>
    <string name="forked_from">版本库分支从</string>
    <string name="gists">主题帖</string>
    <string name="upgrade">升级</string>
    <string name="install">安装</string>
    <string name="next_time">下一次</string>
    <string name="upgrade_version">版本：</string>
    <string name="upgrade_apk_size">Apk大小：</string>
    <string name="publish_time">发布时间：</string>
    <string name="upgrade_info">升级信息：</string>
    <string name="no_upgrade_tip">您已经安装了最新版本</string>
    <string name="fork_failed">创建版本库分支失败</string>
    <string name="no_browser_clients">未安装浏览器客户端</string>
    <string name="releases">已发布版本</string>
    <string name="download">下载</string>
    <string name="download_cancel">下载取消</string>
    <string name="download_complete">下载完成</string>
    <string name="download_empty_tip">下载地址或文件名称为空！</string>
    <string name="download_failed">下载失败</string>
    <string name="download_start">下载开始</string>
    <string name="downloading">正在下载</string>
    <string name="download_source_zip">下载源码 (zip)</string>
    <string name="download_source_tar">下载源码 (tar.gz)</string>
    <string name="no_releases">没有已发布版本</string>
    <string name="released_this">发布此版本</string>
    <string name="on">在</string>
    <string name="close">关闭</string>
    <string name="permission_storage_denied">权限被拒绝，请允许访问存储权限。</string>
    <string name="enable_download_service_tip">请先开启下载服务！</string>
    <string name="closed">关闭的</string>
    <string name="comment">评论</string>
    <string name="comments">评论</string>
    <string name="issue">问题</string>
    <string name="no_comments">没有评论</string>
    <string name="no_description">没有详细描述</string>
    <string name="no_issues">没有问题</string>
    <string name="open">开放的</string>
    <string name="type">类型</string>
    <string name="comment_null_warning">评论不能为空！</string>
    <string name="comment_success">评论成功</string>
    <string name="commit">提交</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="preview">预览</string>
    <string name="write">编辑</string>
    <string name="all">全部</string>
    <string name="created">我创建的</string>
    <string name="assigned">分配给我的</string>
    <string name="mentioned">提到我的</string>
    <string name="participating">参与</string>
    <string name="recently_created">最近创建的</string>
    <string name="previously_created">以前创建的</string>
    <string name="most_comments">评论最多的</string>
    <string name="fewest_comments">评论最少的</string>
    <string name="filter">过滤器</string>
    <string name="best_match">最匹配的</string>
    <string name="most_stars">最多星标的</string>
    <string name="fewest_stars">最少星标的</string>
    <string name="most_forks">最多分支的</string>
    <string name="fewest_forks">最少分支的</string>
    <string name="recently_updated">最近更新的</string>
    <string name="least_recently_updated">以前更新的</string>
    <string name="most_followers">最多跟随者的</string>
    <string name="fewest_followers">最少跟随者的</string>
    <string name="most_recently_joined">最近加入的</string>
    <string name="least_recently_joined">以前加入的</string>
    <string name="most_repositories">最多版本库的</string>
    <string name="fewest_repositories">最少版本库的</string>
    <string name="readme">描述</string>
    <string name="source_code_tar">源码 (tar.gz)</string>
    <string name="source_code_zip">源码 (zip)</string>
    <string name="close_success">关闭成功</string>
    <string name="delete_comment_warning">确认要删除评论？</string>
    <string name="just_now">刚刚</string>
    <string name="reopen">重开</string>
    <string name="reopen_success">重开成功</string>
    <string name="add_a_link">添加一个链接</string>
    <string name="add_bold_text">添加加粗文字</string>
    <string name="add_italic_text">添加斜体文字</string>
    <string name="add_large_header">添加大标题</string>
    <string name="add_medium_header">添加中标题</string>
    <string name="add_small_header">添加小标题</string>
    <string name="add_a_bulleted_list">添加列表</string>
    <string name="copy_clone_url">复制克隆链接</string>
    <string name="insert_code">插入代码</string>
    <string name="insert_a_quote">插入引用</string>
    <string name="mention">直接提到一个用户或者团队</string>
    <string name="unauthorized">未授权。</string>
    <string name="open_in_market">在应用市场中打开</string>
    <string name="rate_in_market">在应用市场中评分或评论</string>
    <string name="source_code_wishes">星标来支持我</string>
    <string name="no_market_clients">未安装应用市场客户端</string>
    <string name="create_issue">创建问题</string>
    <string name="create_issue_success">创建问题成功</string>
    <string name="created_at">创建于</string>
    <string name="edit_issue">编辑问题</string>
    <string name="edit_issue_success">编辑问题成功</string>
    <string name="forked_at">添加到版本库于</string>
    <string name="issue_title_null_tip">问题标题不能为空。</string>
    <string name="latest_update">最后一次更新</string>
    <string name="leave_a_comment">留下一个评论吧</string>
    <string name="markdown_editor">使用MarkDown编辑器</string>
    <string name="title">标题</string>
    <string name="committed">提交</string>
    <string name="compare">比较查看</string>
    <string name="failed_to_open_url">打开链接失败，请长按复制后在浏览器中打开</string>
    <string name="failed_to_recognize">识别GitHub链接失败，请长按复制后在浏览器中打开</string>
    <string name="latest_commit">最后一次提交</string>
    <string name="no_commits">没有提交</string>
    <string name="no_readme">没有描述</string>
    <string name="view_file">查看文件</string>
    <string name="public_repositories">公开的版本库</string>
    <string name="starred_repositories">星标的版本库</string>
    <string name="use_system_downloader">使用系统默认下载器</string>
    <string name="no_download_clients">未安装下载客户端</string>
    <string name="invalid_url">无效链接</string>
    <string name="nothing_to_preview">无可预览内容</string>
    <string name="unread">未读</string>
    <string name="no_notifications_tip">没有新通知了</string>
    <string name="feedback_and_share">分享 &#038; 反馈</string>
    <string name="share_to_friends">分享给您的朋友</string>
    <string name="feedback">反馈</string>
    <string name="openhub_wishes">来自OpenHub的祝福</string>
    <string name="star_wishes" formatted="false">
        您好%s，今天是您在OpenHub的第%d天，谢谢您的使用，我会努力成为更适合您的GitHub app。
        \n\n如果您可以星标来支持我，那就太棒了！
    </string>
    <string name="star_thanks">谢谢您的支持！</string>
    <string name="star_me">星标我</string>
    <string name="star_next_time">继续努力</string>
    <string name="owner_repo">自己的</string>
    <string name="public_repo">版本库</string>
    <string name="private_repo">私有的</string>
    <string name="member_repo">会员</string>
    <string name="most_pushed">最多提交的</string>
    <string name="fewest_pushed">最少提交的</string>
    <string name="full_name_asc">名称升序</string>
    <string name="full_name_desc">名称降序</string>
    <string name="sort_order">排序</string>
    <string name="recently_starred">最近星标的</string>
    <string name="previously_starred">以前星标的</string>
    <string name="trace">足迹</string>
    <string name="my_repos">我的版本库</string>
    <string name="starred_repos">星标版本库</string>
    <string name="trending_repos">趋势版本库</string>
    <string name="bookmarks">书签</string>
</resources>